media/css/cresenity/cresenity.bs3.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Nov 12, 2017, 2:38:05 AM
    Author     : Hery Kurniawan
*/


/* add functionality to bootstrap 2 with bootstrap 3 */

*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
:after,:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}
body{margin:0}
.container {
    padding-left:15px;
    padding-right:15px;
}

a:focus, a:hover {
    text-decoration: none;
}


.row-fluid {
    margin-left:-15px;
    margin-right:-15px;
    width:auto;
}
.row-fluid>[class*="span"] {
    margin-left: 0;
    padding-left:15px;
    padding-right:15px;
}

.row-fluid:after, .row-fluid:before {
    display: table;
    content: " ";
}

.row-fluid:after {
    clear: both;
}
input, textarea, select, .uneditable-input {
    height:28px;
}

.dropdown-menu a, .dropdown-menu>li>a {
    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: normal;
    line-height: 20px;
    color: #333;
    white-space: nowrap;
}
.dropdown-menu>li.open>a:focus, .dropdown-menu>li.open>a:hover,.dropdown-menu .open>a, .dropdown-menu .open>a:hover {
    color: #fff;
    text-decoration: none;
    background-color: #08c;
    background-color: #0081c2;
    background-image: linear-gradient(to bottom,#08c,#0077b3);
    background-image: -moz-linear-gradient(top,#08c,#0077b3);
    background-image: -webkit-gradient(linear,0 0,0 100%,from(#08c),to(#0077b3));
    background-image: -webkit-linear-gradient(top,#08c,#0077b3);
    background-image: -o-linear-gradient(top,#08c,#0077b3);
    background-repeat: repeat-x;
    outline: 0;
    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc',endColorstr='#ff0077b3',GradientType=0);
}

.dropdown-menu li>a:hover, .dropdown-menu li>a:focus, .dropdown-submenu:hover>a {
    color: #fff;
    text-decoration: none;
    background-color: #08c;
    background-color: #0081c2;
    background-image: -moz-linear-gradient(top,#08c,#0077b3);
    background-image: -webkit-gradient(linear,0 0,0 100%,from(#08c),to(#0077b3));
    background-image: -webkit-linear-gradient(top,#08c,#0077b3);
    background-image: -o-linear-gradient(top,#08c,#0077b3);
    background-image: linear-gradient(to bottom,#08c,#0077b3);
    background-repeat: repeat-x;
    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc',endColorstr='#ff0077b3',GradientType=0);
}

.dropdown-submenu {
    position: relative;
}
.dropdown-submenu>a:after {
    display: block;
    float: right;
    width: 0;
    height: 0;
    margin-top: 5px;
    margin-right: -10px;
    border-color: transparent;
    border-left-color: #ccc;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    content: " ";
}
.dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px 6px;
    border-radius: 0 6px 6px 6px;
}

.btn-navbar {
    display: none;
    float: right;
    padding: 7px 10px;
    margin-left: 5px;
    margin-right: 5px;
    background-color: #2c2c2c;
    background-image: -moz-linear-gradient(top, #333333, #222222);
    background-image: -ms-linear-gradient(top, #333333, #222222);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
    background-image: -webkit-linear-gradient(top, #333333, #222222);
    background-image: -o-linear-gradient(top, #333333, #222222);
    background-image: linear-gradient(top, #333333, #222222);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
    border-color: #222222 #222222 #000000;
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1),0 1px 0 rgba(255, 255, 255, 0.075);
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
}

.btn-navbar .icon-bar {
    display: block;
    width: 18px;
    height: 2px;
    background-color: #f5f5f5;
    -webkit-border-radius: 1px;
    -moz-border-radius: 1px;
    border-radius: 1px;
    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
}
.navbar .brand {
    float: left;
    display: block;
    padding: 8px 20px 12px;
    margin-left: -20px;
    font-size: 20px;
    font-weight: 200;
    line-height: 1;
    color: #ffffff;
}

.navbar {
    margin-bottom:0px;
    border:0;
}

.navbar .nav {
    position: relative;
    left: 0;
    display: block;
    float: left;

}

.navbar .nav>li {
    display: block;
    float: left;
}

.navbar .nav>li>a {
    float: none;
    padding: 10px 10px 11px;
    line-height: 19px;
    color: #999999;
    text-decoration: none;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}

.nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
    background-color: transparent;

}

.nav>li>a:focus, .nav>li>a:hover {
    text-decoration: none;
    background-color: transparent;
}


.form-horizontal .control-group {
    margin-bottom: 18px;
}

.form-horizontal .control-label {
    float: left;
    width: 140px;
    padding-top: 5px;
    text-align: right;
}

.form-horizontal .controls {
    margin-left: 160px;
}

.form-horizontal .form-actions {
    padding-left: 160px;
}

.form-actions {
    padding: 17px 20px 18px;
    margin-top: 18px;
    margin-bottom: 18px;
    background-color: #eeeeee;
    border-top: 1px solid #ddd;
}

input, textarea, select, .uneditable-input {
    display: block;
    width: 100%;
    height: 34px;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #555;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}
textarea {
    height:100px;
}
input[type="button"], input[type="reset"], input[type="submit"] {
    width: auto;
    height: auto;
}
input[type="file"] {
    width: auto;
    padding: initial;
    line-height: initial;
    border: initial;
    background-color: #ffffff;
    background-color: initial;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}


.modal {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1050;
    display: none;
    overflow: hidden;
    -webkit-overflow-scrolling: touch;
    outline: 0;
}
body .modal {
    width: inherit;
    margin-left: inherit;
}

.modal-backdrop {
    opacity:0.8;
}
.alert-error {
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
}

.btn-group-xs>.btn, .btn-xs {
    padding: 1px 5px;
    font-size: 12px;
    line-height: 1.5;
    border-radius: 3px;
}

.btn-group, .btn-group-header-modal {
    position: absolute;
    right: 40px;
    top: 8px;
}

@media (min-width: 992px) {

    .row-fluid > .span1,.row > .span1 {
        width: 8.33333333%;
    }
    .row-fluid > .span2,.row > .span2 {
        width: 16.66666667%;
    }
    .row-fluid > .span3,.row > .span3 {
        width:25%;
    }
    .row-fluid > .span4,.row > .span4 {
        width:33.33333333%;
    }
    .row-fluid > .span5,.row > .span5 {
        width: 41.66666667%;
    }
    .row-fluid > .span6,.row > .span6 {
        width: 50%;
    }
    .row-fluid > .span7,.row > .span7 {
        width: 58.33333333%;
    }
    .row-fluid > .span8,.row > .span8 {
        width: 66.66666667%;
    }    
    .row-fluid > .span9,.row > .span9 {
        width:75%;
    }
    .row-fluid > .span10,.row > .span10 {
        width: 83.33333333%;
    }
    .row-fluid > .span11,.row > .span11 {
        width: 91.66666667%;
    }
    .row-fluid > .span12,.row > .span12 {
        width: 100%;
    }

    .row-fluid>[class*="span"] {
        float: left;
    }
}

